namespace Pig_n_Go
{
    public interface IPassengerRepository
    {
        
    }
}